create header component and add it to base.html

--- a/templates/shared/base.html
+++ b/templates/shared/base.html
@@ -11,6 +11,7 @@
 <body>
 <header>
     <!-- Add your header content here -->
+    {% include 'components/header_component.html' %}
 </header>
 
 <main>
