--- a/templates/components/header_component.html
+++ b/templates/components/header_component.html
@@ -11,7 +11,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a href="{% url 'index_page' %}" class="nav-link" title="Logout"
+                    <a href="{% url 'logout' %}" class="nav-link" title="Logout"
                        style="margin-left: 10px; color: #ffffff; background-color: #81bcee; border-color: #81bcee; border-radius: 5px; padding: 5px 10px;">
                         <i class="fas fa-sign-out-alt" style="margin-right: 5px;"></i>
                         Logout
