fix login template bug

--- a/account_module/templates/account_module/login.html
+++ b/account_module/templates/account_module/login.html
@@ -6,7 +6,7 @@
     <h2>Login</h2>
     <form method="post">
         {% csrf_token %}
-        {{ form.as_p }}
+        {{ login_form }}
         <input type="submit" value="Login">
     </form>
 {% endblock %}
